# epl_erratas

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  env.yml
epl_erratas/: __init__.py  app.py  requirements.txt
epl_erratas/src/: libraries.py  models.py
